# OpenCV_Cpp

./: .gitignore  CMakeLists.txt  README.md
individual_proj/binary_vision/: main.cpp
individual_proj/camera_calibration/: main.cpp
individual_proj/histograms_example/: main.cpp
individual_proj/image_transformations/: main.cpp  mouse.h
individual_proj/noise_reduction/: main.cpp
individual_proj/opencv_test/: main.cpp
